@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.16.0)
 cmake_policy(SET CMP0048 NEW)
 
 project(nazzida
-    VERSION 1.0.1
+    VERSION 1.0.2
     DESCRIPTION "Personal Fluid Balance Protocol"
     HOMEPAGE_URL "https://github.com/Huessenbergnetz/nazzida"
     LANGUAGES CXX)
