@@ -1,6 +1,6 @@
 Name: harbour-nazzida
 Summary: Personal Fluid Balance Protocol
-Version: 1.0.1
+Version: 1.0.2
 Release: 1
 # The contents of the Group field should be one of the groups listed here:
 # https://github.com/mer-tools/spectacle/blob/master/data/GROUPS
